page2/css/lab.css
/* CSS by Leilah Hodges */

/* recipe reveal css */

.recipe {
  background-color: #ffc5dd;
  border-radius: 15px;
  border: solid 10px #ff81b5;
  padding: 10px;
  margin: 10px;
}

.recipe img {
  max-width: 80%;
  height: auto;
  border-radius: 15px;
}

.recipe h3 {
  /* background-color: #ff81b5; */
  color: #F10102;
  border: solid 5px #F10102;
  padding: 10px;
  border-radius: 10px;
  margin-left: 35px;
  margin-right: 35px;
}

.recipe h3 {
  background-color: #f10149bf;
  color: #ffc5dd;
  padding: 10px;
  border-radius: 15px;
  margin-left: 35px;
  margin-right: 35px;
}

.recipe h5 {
  color: #F10102;
  text-align: center;
}

.recipe p {
  color: #20531c;
}

ol {
  margin: 50px;
  background-color: #ffdfec;
  color: #a20106;
  text-align: left;
  line-height: 1.5;
  border: solid 5px #a20106;
  border-radius: 15px;
  padding: 80px;
}

/* body stuff */

body {
  background-color: #fffef7;
  font-family: 'Courier New', Courier, monospace;
  border-radius: 15px;
}

.header {
  text-align: center;
  font-weight: bold;
  padding: 5px;
  margin: 25px;
  border: solid 2px #e10324;
  background-color: #EEB1DD;
  color: #e10324;
  border-radius: 15px;
  margin-left: 300px;
  margin-right: 300px;
}

h1 {
  background-color: #EEB1DD;
  border: solid 2px #EEB1DD;
  color: #e10324;
  font-size: 60px;
}

h2 {
  background-color: #EFE04B;
  border: solid 2px #EFE04B;
  border-radius: 15px;
  color: #20531C;
  font-size: 30px;
  padding:10px;
  margin-left: 35px;
  margin-right: 35px;

}

p {
  color:#e10324;
  font-size:25px;
}

.grouping p {
  color:#EFE04B;
  font-size:25px;
}

h3 {
  background-color: #EEB1DD;
  border: solid 2px #EEB1DD;
  border-radius: 15px;
  color: #20531C;
  font-size: 25px;
  margin-left:100px;
  margin-right:100px;
  padding:10px;
}

label {
  color: #EEB1DD;
}

input {
  border-radius: 15px;
  background-color:#EEB1DD;
  border: solid 3px #e10324;
  font-family: 'Courier New', Courier, monospace;
  font-weight: bold;
}

.minor-section {
  text-align: center;
  padding: 10px;
  margin: 30px;
  background-color: #20531C;
  border: solid 2px #EFE04B;
  border-radius: 15px;
  font-weight: 550;
  font-size: 25px;
  margin-left: 175px;
  margin-right: 175px;
  margin-bottom: 30px;
}

.minor-section-background {
  background-color: #F2EFEA;
  margin: 40px;
  padding: 10px;
  border-radius: 15px;
  margin-left: 100px;
  margin-right: 100px;
}

.grouping {
  border-radius: 10px;
  outline: solid 3px #EFE04B;
  padding: 10px;
  margin: 50px 100px;
}

/* image css */

#decals-section {
  display: flex;
  justify-content: center;
}

#stickerOne {
  max-width: 15%;
  margin: 20px;
}

#stickerTwoThree {
  max-width: 20%;
  margin: 20px;
}

/* navigation */

#next {
  border-radius: 10px;
  background-color: #EEB1DD;
  border-color: #e10324;
  color: #e10324;
  font-family: 'Courier New', Courier, monospace;
  font-weight: bold;
  font-size: 30px;
  margin-bottom: 30px;
  cursor: pointer;
}

button {
  border-radius: 15px;
  background-color:#e10324;
  border: solid 3px #EEB1DD;
  color: #EEB1DD;
  font-family: 'Courier New', Courier, monospace;
  font-weight: bold;
  font-size: larger;
  padding: 10px;
  cursor: pointer;
}

